inline code added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,51 @@
 <head>
   <meta charset="utf-8">
   <title><%= title %></title>
-  <link href="/style.css" rel="stylesheet">
+  <style>
+    @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
+
+    body {
+      font-family: 'PT Sans', sans-serif;
+    }
+
+    em {
+      font-style: normal;
+    /*  font-weight: bold;  */
+    }
+
+    .body_div {
+      min-height: 500px;
+    }
+
+    .action_buttons button {
+      margin: 8px;
+    }
+
+    .input-box-class input {
+      margin: 8px;
+    }
+
+    .result-div {
+      margin: 8px;
+    }
+
+    .title_container {
+      margin: 15px;
+    }
+
+    .container div{
+      margin: 5px;
+    }
+
+    .blog_div {
+      border: solid 2px grey;
+    }
+
+    .anchor_class {
+      float: right;
+      margin-bottom: 35px;
+    }
+  </style>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <!-- jQuery library -->
@@ -29,6 +73,30 @@
   <footer>
     <div class="container"></div>
   </footer>
-  <script src='/index.js'></script>
+  <script type="text/javascript">
+    $(function(){
+      $('.add_button').click(function(){
+        var name = $('.name_class').val();
+        var content = $('.content_class').val();
+        $.ajax({
+          type: 'GET',
+          data: {
+            name: name,
+            content: content
+          },
+          url: '/add',
+          success: function(data){
+            window.location = '/';
+            // alert('added successfully.');
+          },
+          fail: function(data){
+            alert('operation failed.');
+          }
+        });
+      });
+    });
+
+
+  </script>
 </body>
 </html>
